Thu Feb 26 04:10:51 UTC 2009  Friedhelm Wolf  <fwolf@dre.vanderbilt.edu>

        * orbsvcs/orbsvcs/LWFT/DDSStateUpdate_T.cpp
        * orbsvcs/orbsvcs/LWFT/DDSStateReaderListener_T.cpp:
        
          Added typename to fix gcc compile errors.

Wed Feb 25 19:45:54 UTC 2009  Friedhelm Wolf  <fwolf@dre.vanderbilt.edu>

        * orbsvcs/orbsvcs/LWFT/StateSynchronizationAgent_i.cpp:
        
          Changed degging level of update_rank_list output.

Sun Feb 22 00:04:09 UTC 2009  Friedhelm Wolf  <fwolf@dre.vanderbilt.edu>

        * orbsvcs/orbsvcs/LWFT/AppOptions.cpp:
        
          Changed the way log message levels are masked.
        
        * MPC/config/lwft_server.mpb:
        
          Added projects necessary for servers now due to them being
          clients for the ReplicationManager.
        
        * orbsvcs/orbsvcs/LWFT/StateSynchronizationAgent_i.cpp:
        * orbsvcs/orbsvcs/LWFT/CorbaStateUpdate.h        
        * orbsvcs/orbsvcs/LWFT/CorbaStateUpdate.cpp:
        
          Changed update_rank_list behavior. Casting to
          ReplicatedApplication appears now in set_state to reduce network
          communication due to narrow calls.

        * orbsvcs/orbsvcs/LWFT/Client_Request_Interceptor.cpp:
        
          Added debugging output.

Fri Feb 20 22:08:49 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/idl_global.h:
        
          Cosmetic changes.
          
        * TAO_IDL/fe/lex.yy.cpp(idl_store_pragma):
        * TAO_IDL/fe/idl.ll(idl_store_pragma):
        
          Removed code to look up a node referred to by a
          #pragma DCPS_DATA_TYPE directive, since the node
          may be declared later in the IDL file. Moved the
          detection to the visitor, see below.
          
        * TAO_IDL/util/utl_global(string_to_scoped_name).cpp:
        
          Fixed logic to cover more use cases, and replaced 
          char* pointers and char arrays with ACE_CString.
          