@@ -14,15 +14,12 @@
 #include <string>
 
 #include "HostMonitorC.h"
-#include "AppSideMonitor_Thread.h"
 
 /**
  *  @class  AppSideReg
  *
  *  @brief Encapsulates AppSideReg
  */
-
-class ACE_Barrier;
 
 class LWFT_Server_Export AppSideReg
 {
@@ -38,7 +35,6 @@ public:
 private:
   u_short port_;
   std::string HM_ior_;
-  std::auto_ptr <AppSideMonitor_Thread> monitor_;
   HostMonitor_var hmvar_;
   CORBA::ORB_var orb_;
 };
